<resources>
    <string name="app_name">Peterpan</string>
    <string name="form_pengajuan">Form Pengajuan</string>
    <string name="nim">NIM</string>
    <string name="nama">Nama</string>
    <string name="nama_dosen">Nama Dosen</string>
    <string name="matakuliah">Matakuliah</string>
    <string name="tanggal">Tanggal</string>
    <string name="sesi">Sesi</string>
    <string name="simpan">Simpan</string>
</resources>